--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec \"ts-node\" src/app.ts"
+    "dev": "nodemon --watch src --ext ts --exec \"ts-node --files\" src/app.ts"
   },
   "keywords": [],
   "author": "",
