--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
     "module": "CommonJS",
     "moduleResolution": "node",
     "outDir": "dist",
