--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "typeRoots": ["./src/@types", "./node_modules/@types"],
+  "typeRoots": [
+    "./src/@types",
+    "./node_modules/@types"
+  ],
   "dependencies": {
     "@prisma/client": "^6.19.1",
     "bcrypt": "^6.0.0",
@@ -18,7 +21,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "prisma": "^6.19.1"
+    "prisma": "^6.19.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
